[gd_scene load_steps=12 format=3 uid="uid://h78odh6i6auu"]

[ext_resource type="Script" path="res://scenes/enemies/drone.gd" id="1_fhxoj"]
[ext_resource type="Texture2D" uid="uid://bd35l1wllfvgj" path="res://graphics/enemies/drone.png" id="1_s6vjo"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_hin0n"]
[ext_resource type="Texture2D" uid="uid://boug07xidc67c" path="res://graphics/explosions/explosion_1.png" id="3_8fpja"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0xedu"]
shader = ExtResource("2_hin0n")
shader_parameter/color = Color(0.839216, 0.25098, 0.227451, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dqqlf"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lfc5y"]
radius = 816.134

[sub_resource type="CircleShape2D" id="CircleShape2D_yrc8y"]
radius = 110.005

[sub_resource type="Animation" id="Animation_5xwjr"]
resource_name = "explosion"
length = 2.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2, 2.05, 2.1, 2.15, 2.2, 2.25, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 2.35),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"explode"
}, {
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_18vkg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xxa3a"]
_data = {
"RESET": SubResource("Animation_18vkg"),
"explosion": SubResource("Animation_5xwjr")
}

[node name="Drone" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_fhxoj")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_0xedu")
position = Vector2(3, 0)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_s6vjo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dqqlf")

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
modulate = Color(0.745098, 0.223529, 0.305882, 1)
shape = SubResource("CircleShape2D_lfc5y")

[node name="ExplosionRange" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRange"]
modulate = Color(0.521569, 0.12549, 0.137255, 1)
position = Vector2(-7, 1)
shape = SubResource("CircleShape2D_yrc8y")

[node name="ExplosionSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_8fpja")
hframes = 8
vframes = 8
frame = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["entity"]]
libraries = {
"": SubResource("AnimationLibrary_xxa3a")
}

[connection signal="body_entered" from="DetectionRange" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="ExplosionRange" to="." method="_on_explosion_range_body_entered"]
[connection signal="body_exited" from="ExplosionRange" to="." method="_on_explosion_range_body_exited"]
